--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.11",
     "sass": "^1.66.1"
   }
 }
